Corrected Spelling Mistakes in English/Neutral Language

--- a/AppResources.resx
+++ b/AppResources.resx
@@ -2248,7 +2248,7 @@ No waypoint in Flight Plan</comment>
     <comment>Others</comment>
   </data>
   <data name="WeightAndBalance.Passengers" xml:space="preserve">
-    <value>Passsengers</value>
+    <value>Passengers</value>
     <comment>Passengers</comment>
   </data>
   <data name="WeightAndBalance.Synchronize" xml:space="preserve">
@@ -2368,7 +2368,7 @@ No waypoint in Flight Plan</comment>
     <comment>You have received a level 2 violation and have been disconnected from your current session. You may begin another flight immediately and an appeal is not necessary if your total violation count allows it. We encourage you to review any applicable tutorials at youtube.com/infiniteflight</comment>
   </data>
   <data name="Violation.Level3Received.Message" xml:space="preserve">
-    <value>You have received a level 3 violation and have been disconnected from your current session. We enourage you to review and applicable tutorials at youtube.com/infiniteflight</value>
+    <value>You have received a level 3 violation and have been disconnected from your current session. We enourage you to review any applicable tutorials at youtube.com/infiniteflight</value>
     <comment>You have received a level 3 violation and have been disconnected from your current session. We enourage you to review and applicable tutorials at youtube.com/infiniteflight</comment>
   </data>
   <data name="Violation.UnspecifiedReason" xml:space="preserve">
