--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -2547,4 +2547,8 @@ Slow down to avoid further violations.</comment>
     <value>Activate Parking Brakes on the ramp to make changes to Weight and Balance in Live Mode.</value>
     <comment>Activate Parking Brakes on the ramp to make changes to Weight and Balance in Live Mode</comment>
   </data>
+  <data name="SystemMessaging.Jetbridges.NoJetbridgesAvailableAtAirport" xml:space="preserve">
+    <value>No jetbridges available at this airport</value>
+    <comment>No jetbridges available at this airport</comment>
+  </data>
 </root>
