--- a/Strings/AppResources.he.resx
+++ b/Strings/AppResources.he.resx
@@ -2591,4 +2591,12 @@ Please ask to be assigned via the Scenery Editing forum first</comment>
     <value>אין גשרי סילון זמינים בקרבת מקום</value>
     <comment>No jet bridges available nearby</comment>
   </data>
+  <data name="MapItemInfoControl.Contributor" xml:space="preserve">
+     <value>תוֹרֵם</value>
+     <comment>Contributor</comment>
+   </data>
+   <data name="MapItemInfoControl.Contributors" xml:space="preserve">
+     <value>תורמים</value>
+     <comment>Contributors</comment>
+   </data>
 </root>
